@@ -13,6 +13,7 @@ Version 1.3.6+svn:
  * WML engine:
    * now [base_unit]id= inside [unit] can extend upon existing unit types
  * miscellaneous and bug fixes
+   * rewrote the config merge routine (should improve parse time slightly)
    * various code cleanups
 
 Version 1.3.6:
